forward-auth/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: forward-auth
spec:
  forwardAuth:
    address: "http://traefik-forward-auth.traefik.svc.cluster.local:4181"
    trustForwardHeader: true
    authResponseHeaders:
      - "X-Forwarded-User"
